# ur5e_tutorials

./: CMakeLists.txt  README.md  docker-compose.yml
catkin_ws/src/ur5e_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/ur5e_tutorials/launch/: pick_and_place.launch  pick_and_toss.launch  wiggle.launch
catkin_ws/src/ur5e_tutorials/scripts/: pick_and_place.py  pick_and_place_fake.py  pick_and_toss.py  pick_and_toss_fake.py  robotiq.py  wiggle.py  wiggle_fake.py
catkin_ws/src/ur5e_tutorials/universal_robot/ur5e_moveit_config/config/: joint_limits.yaml
docker/ur5e/: Dockerfile
launch/: pick_and_place.launch  pick_and_toss.launch
scripts/: pick_and_place.py  pick_and_toss.py  robotiq.py  wiggle.py
universal_robot/ur5e_moveit_config/config/: joint_limits.yaml
utils/: ur5e_moveit.bash  ur5e_moveit_real.sh  ur5e_moveit_sim.sh  ur5e_pp.bash  ur5e_pp.sh  ur5e_pp_fake.sh  ur5e_pt.bash  ur5e_pt.sh  ur5e_pt_fake.sh  ur5e_rviz.sh  ur5e_wiggle.bash  ur5e_wiggle.sh  ur5e_wiggle_fake.sh
